@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-04-10T08:16:54Z",
-  "count" : 2,
+  "timestamp" : "2022-04-24T01:07:28Z",
+  "count" : 1,
   "count_minmax" : [ 0, 2 ],
   "count_prev_day_inc" : 3,
   "count_prev_day_dec" : 0,
-  "uniques" : 2,
+  "uniques" : 1,
   "uniques_minmax" : [ 0, 2 ],
   "uniques_prev_day_inc" : 3,
   "uniques_prev_day_dec" : 0
