@@ -1,22 +1,15 @@
 {
-  "timestamp" : "2022-04-21T08:20:24Z",
-  "count_outdated" : 242,
-  "uniques_outdated" : 106,
-  "count" : 258,
-  "uniques" : 117,
+  "timestamp" : "2022-04-24T01:07:28Z",
+  "count_outdated" : 243,
+  "uniques_outdated" : 107,
+  "count" : 257,
+  "uniques" : 116,
   "views" : [
     {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-04-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 0, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 0, 2 ]
     },
     {
