@@ -1,16 +1,11 @@
 {
-  "count": 16,
-  "uniques": 10,
+  "count": 14,
+  "uniques": 8,
   "views": [
     {
-      "timestamp": "2022-04-09T00:00:00Z",
+      "timestamp": "2022-04-10T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2022-04-10T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2022-04-11T00:00:00Z",
