@@ -1,3 +1,9 @@
+2022-04-24T01:07:28Z:
+* notice: last 14d: all unq: 14 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 242 106 / 258 117
+* notice: next accum: outdated-all outdated-unq / all unq: 243 107 / 257 116
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -1 -1 // +0 +0 / -1 -1
+
 2022-04-21T08:20:24Z:
 * notice: last 14d: all unq: 16 10
 * notice: prev accum: outdated-all outdated-unq / all unq: 242 106 / 257 116
